--- a/data/settings.html
+++ b/data/settings.html
@@ -1,8 +1,72 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Robot Settings</title>
-    <button onclick="window.location.href='http://192.168.4.1'">Zurück</button>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            text-align: center;
+            padding: 20px;
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        .container {
+            background-color: white;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 90%;
+            max-width: 600px;
+            margin: 0 auto;
+            text-align: left;
+        }
+
+        label {
+            font-weight: bold;
+            display: inline-block;
+            margin-bottom: 10px;
+        }
+
+        input[type="number"] {
+            width: 100%;
+            padding: 8px;
+            margin: 10px 0 20px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        input[type="submit"], .back-button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            width: 100%;
+        }
+
+        input[type="submit"]:hover, .back-button:hover {
+            background-color: #45a049;
+        }
+
+        .back-button {
+            margin-bottom: 20px;
+            width: auto;
+        }
+
+        form {
+            margin-top: 20px;
+        }
+    </style>
     <script>
         function getSettings() {
             fetch('/settings')
@@ -45,20 +109,30 @@
 </head>
 <body>
     <h1>Robot Settings</h1>
-    <form onsubmit="event.preventDefault(); setSettings();">
-        <label for="minDrive">Min Drive:</label>
-        <input type="number" id="minDrive" name="minDrive"><br><br>
-        <label for="maxDrive">Max Drive:</label>
-        <input type="number" id="maxDrive" name="maxDrive"><br><br>
-        <label for="minPause">Min Pause:</label>
-        <input type="number" id="minPause" name="minPause"><br><br>
-        <label for="maxPause">Max Pause:</label>
-        <input type="number" id="maxPause" name="maxPause"><br><br>
-        <label for="minChange">Min Change:</label>
-        <input type="number" id="minChange" name="minChange"><br><br>
-        <label for="maxChange">Max Change:</label>
-        <input type="number" id="maxChange" name="maxChange"><br><br>
-        <input type="submit" value="Save Settings">
-    </form>
+    <div class="container">
+        <button class="back-button" onclick="window.location.href='/'">Zurück</button>
+        
+        <form onsubmit="event.preventDefault(); setSettings();">
+            <label for="minDrive">Min Drive:</label>
+            <input type="number" id="minDrive" name="minDrive">
+
+            <label for="maxDrive">Max Drive:</label>
+            <input type="number" id="maxDrive" name="maxDrive">
+
+            <label for="minPause">Min Pause:</label>
+            <input type="number" id="minPause" name="minPause">
+
+            <label for="maxPause">Max Pause:</label>
+            <input type="number" id="maxPause" name="maxPause">
+
+            <label for="minChange">Min Change:</label>
+            <input type="number" id="minChange" name="minChange">
+
+            <label for="maxChange">Max Change:</label>
+            <input type="number" id="maxChange" name="maxChange">
+
+            <input type="submit" value="Save Settings">
+        </form>
+    </div>
 </body>
 </html>
